# tts_webui_extension.openvoice_v2

./: .gitignore  README.md  pyproject.toml  setup.py
extension_openvoice/: main.py
extension_openvoice_v2/: main.py
tts_webui_extension/openvoice_v2/: main.py
