[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.openvoice_v2"
version = "0.1.0"
description = "OpenVoice: A versatile instant voice cloning approach"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "MyShell-OpenVoice @ git+https://github.com/rsxdalv/OpenVoice@stable",
    "melotts @ git+https://github.com/rsxdalv/MeloTTS@stable",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.openvoice_v2"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
